# 02476_mnist

./: Makefile  pyproject.toml
02476_mnist/: __init__.py  predict_model.py  train_model.py
dockerfiles/: trainer.dockerfile
models/: checkpoint.pth
